--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -11,13 +11,14 @@
             <tbody>
             {{#each products}}
                 <tr>
-                    <td><img style="width:70px;height:70px" src="/product-images/{{this._id}}"></td>
-                    <td> {{this.Title}} </td>
-                    <td><button class="cart-item-count mr-3">-</button>1<button class="cart-item-count mr-3">+
-                        
-                    </button></td>
+                    <td><img style="width:70px;height:70px" src="/product-images/{{this._id}}.jpg"></td>
+                    <td> {{this.Name}} </td>
+                    <td><button class="cart-item-count mr-3">-</button>1<button class="cart-item-count mr-3">+</button>
+                    </td>
 
-                    <td><a href="" class="btn btn-danger">Remove</a> </td>
+                    <td>
+                        <a href="" class="btn btn-danger">Remove</a>
+                         </td>
 
                  </tr>
                  {{/each}}
