--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="/">Products <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cart">Cart</a>
+                        <a class="nav-link" href="/cart">Cart<span class="badge badge-success">{{cartCount}}</span></a>
                     </li>
                      {{#if user}}
 
