ajax model cart added, new structure of cart added

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -11,9 +11,11 @@
             <tbody>
             {{#each products}}
                 <tr>
+                    {{#each this.product}}
                     <td><img style="width:70px;height:70px" src="/product-images/{{this._id}}.jpg"></td>
                     <td> {{this.Name}} </td>
-                    <td><button class="cart-item-count mr-3">-</button>1<button class="cart-item-count mr-3">+</button>
+                    {{/each}}
+                    <td><button class="cart-item-count mr-3">-</button>{{this.quantity}}<button class="cart-item-count mr-3">+</button>
                     </td>
 
                     <td>
