--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -11,7 +11,8 @@
                         <div class="card-body">
                             <h5 class="card-title">{{this.Name}}</h5>
                             <p class="card-text">{{this.Category}}</p>
-                            <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to cart</a>
+                            
+                            <button onclick="addToCart('{{this._id}}')" class="btn btn-primary">Add to Cart</button>
                         </div>
                     </div>
                 </div>
@@ -21,3 +22,6 @@
    
         </div>
     </section>
+    <script>
+       
+    </script>
