--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -11,11 +11,14 @@
             <tbody>
             {{#each products}}
                 <tr>
-                    {{#each this.product}}
-                    <td><img style="width:70px;height:70px" src="/product-images/{{this._id}}.jpg"></td>
-                    <td> {{this.Name}} </td>
-                    {{/each}}
-                    <td><button class="cart-item-count mr-3">-</button>{{this.quantity}}<button class="cart-item-count mr-3">+</button>
+                   
+                    <td><img style="width:70px;height:70px" src="/product-images/{{this.product._id}}.jpg"></td>
+                    <td> {{this.product.Name}} </td>
+                    
+                    <td>
+                        <button class="cart-item-count mr-3" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-1)">-</button>
+                        <span id="{{this.product._id}}">{{this.quantity}}</span>
+                        <button class="cart-item-count mr-3" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',1)">+</button>
                     </td>
 
                     <td>
@@ -28,3 +31,34 @@
         </table>
     </div>
 </section>
+
+<script>
+
+    function changeQuantity(cartId,proId,count) {  
+
+        let quantity=parseInt(document.getElementById(proId).innerHTML)
+        count=parseInt(count)
+
+        $.ajax({
+            url:'/change-product-quantity',
+            data:{
+                cart:cartId,
+                product:proId,
+                count:count,
+                quantity:quantity
+
+            },
+            method:'post',
+            success:(response)=>{
+                if(response.removeProduct){
+                    alert("product removed from the cart")
+                    location.reload()
+                }else{
+                        
+                        document.getElementById(proId).innerHTML=quantity+count    
+                }
+                
+            }
+        })  
+    }
+</script>
