--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -11,6 +11,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{this.Name}}</h5>
                             <p class="card-text">{{this.Category}}</p>
+                               <p class="card-text">Rs.{{this.Price}}</p>
                             
                             <button onclick="addToCart('{{this._id}}')" class="btn btn-primary">Add to Cart</button>
                         </div>
