--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -1,70 +1,97 @@
 <section>
-    <div class="container">
-        <table class="table mt-5">
-            <thread>
-                <tr>
-                    <th scope="col">Item</th>
-                      <th scope="col">Title</th>
-                        <th scope="col">Price</th>
-                        
-                </tr>
-            </thread>
-            <tbody>
-            {{#each products}}
-                <tr>
+   
+            <div class="cart-table">
+                <table >
                    
-                    <td><img style="width:70px;height:70px" src="/product-images/{{this.product._id}}.jpg"></td>
-                    <td> {{this.product.Name}} </td>
-                    <td> Rs.{{this.product.Price}} </td>
-                    
-                    
-                    <td>
-                        <button class="cart-item-count mr-3" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-1)">-</button>
-                        <span id="{{this.product._id}}">{{this.quantity}}</span>
-                        <button class="cart-item-count mr-3" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',1)">+</button>
-                    </td>
 
-                    <td>
-                        <a href="" class="btn btn-danger">Remove</a>
-                         </td>
+                         <tr class="heading">
+                <th>Item</th>
+                <th>Title</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Del</th>
+            </tr>
+                 
+                   
+                        {{#each products}}
+                        <tr class="data">
 
-                 </tr>
-                 {{/each}}
-            </tbody>
-        </table>
-        <hr>
-        <h3 class="float-right mr-5 mt-4">TOTAL : Rs.{{total}}</h3>
-        <a href="/place-order" class="float-right mr-5 mt-5 btn btn-success">Place Order</a>
-    </div>
+                            <td><img  src="/product-images/{{this.product._id}}.jpg" alt="image">
+                            </td>
+                            <td>{{this.product.Name}}</td>
+                            <td>Rs.{{this.product.Price}}</td>
+
+                            <td class="1">
+                                <button class="q1"
+                                    onclick="changeQuantity('{{this._id}}','{{this.product._id}}','{{../user._id}}',-1)">-</button>
+                                <span class="quantity mt-2" id="{{this.product._id}}">{{this.quantity}}</span>
+                                <button class="q2 " 
+                                    onclick="changeQuantity('{{this._id}}','{{this.product._id}}','{{../user._id}}',1)">+</button>
+                            </td>
+                            <td>
+                                <a ><button class="del"
+                                    onclick="deleteProduct('{{this._id}}','{{this.product._id}}','{{../user}}')"><img
+                                        src="/images/trash-2.svg" alt=""></button></a>
+                            </td>
+                        </tr>
+                        {{/each}}
+                    
+                </table>
+              
+            </div>
+  
 </section>
-
+<div class="place-order">
+      
+                <hr>
+                <h5 id="h5" class="float-right mr-5 mt-4">TOTAL: RS.<span id="total">{{totalValue}}</span>
+                </h5><br><br><br>
+               <a id="place-order" href="/place-order" class="btn btn-success float-right mr-5 mt-4"> Place
+                    Order </a>
+</div>
 <script>
-
-    function changeQuantity(cartId,proId,count) {  
-
-        let quantity=parseInt(document.getElementById(proId).innerHTML)
-        count=parseInt(count)
-
+    function changeQuantity(cartId, proId, userId, count) {
+        let quantity = parseInt(document.getElementById(proId).innerHTML)
+        count = parseInt(count)
         $.ajax({
-            url:'/change-product-quantity',
-            data:{
-                cart:cartId,
-                product:proId,
-                count:count,
-                quantity:quantity
-
+            url: '/change-product-quantity',
+            data: {
+                user: userId,
+                cart: cartId,
+                product: proId,
+                count: count,
+                quantity: quantity
             },
-            method:'post',
-            success:(response)=>{
-                if(response.removeProduct){
-                    alert("product removed from the cart")
+            method: 'post',
+            success: (response) => {
+                if (response.removeProduct) {
+                    console.log("removeProduct")
+                    alert('Product Removed from Cart')
                     location.reload()
-                }else{
-                        
-                        document.getElementById(proId).innerHTML=quantity+count    
+                } else {
+                    document.getElementById(proId).innerHTML = quantity + count
+                    document.getElementById('total').innerHTML = response.total
                 }
-                
             }
-        })  
+        })
+    }
+</script>
+<script>
+    function deleteProduct(cartId, proId, userId) {
+        $.ajax({
+            url: '/delete-Product',
+            data: {
+                user: userId,
+                cart: cartId,
+                product: proId
+            },
+            method: 'post',
+            success: (response) => {
+                if (response.removeProduct) {
+                    alert("Product removed from cart")
+                    location.reload()
+                }
+            }
+        })
     }
 </script>
