--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -1,38 +1,45 @@
-<form action="/place-order">
- <center><h2>Enter Delivery details</h2></center>
-  <div class="form-group">
-     
-    <label for="formGroupExampleInput"><b><i>Address</i></b></label>
-    <input type="text" class="form-control" id="formGroupExampleInput" >
-  </div>
-
-  <div class="form-group">
-     
-    <label for="formGroupExampleInput"><b><i>Pincode</i></b></label>
-    <input type="text" class="form-control" id="formGroupExampleInput">
-  </div>
-  <div class="form-group">
-    <label for="formGroupExampleInput2"><b><i>Mobile</i></b></label>
-    <input type="text" class="form-control" id="formGroupExampleInput2" >
-  </div>
+<section>
+    <div class="container mt 5">
+        <form action="" id="checkout-form">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Enter Delivery Details</h2><br>
+                    <div>
+                        <label for="">Address</label>
+                        <input class="form-control" type="text" id="address" name="address">
+                        <label for="">Pincode</label>
+                        <input class="form-control" type="text" id="pincode" name="pincode">
+                        <label for="">Mobile</label>
+                        <input class="form-control" type="text" id="mobile" name="mobile">
+                        <input type="text" name="userId" id="" value="{{user._id}}" hidden>
+                    </div>
 
 
 
+                </div>
+                <div class="col-md-4">
+                    <div class=" mt-4 ml-4 checkout">
+                        <h5>Total Amount : Rs.{{total}}</h5>
+                        <br>
+                        <div class="payment">
+                            <p>Payment Method</p>
+                            <label class="radio-inline">
+                                <input type="radio" name="payment-method" value="COD" checked>COD
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="payment-method" value="ONLINE">Online Payment
+                            </label>
+                            <button class="btn btn-primary float-right" type="submit">Checkout</button>
+                        </div>
 
-<h2>Payment</h2>
+                    </div>
+                </div>
 
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
-  <label class="form-check-label" for="exampleRadios1">
-    COD
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-  <label class="form-check-label" for="exampleRadios2">
-    Online
-  </label>
 
-  <h3>total amount: Rs. {{total}}</h3>
-</div>
-</form>
+            </div>
+    </div>
+    </form>
+
+
+    </div>
+</section>
